[gd_scene load_steps=2 format=3 uid="uid://c223vha4r3wq7"]

[ext_resource type="Script" path="res://Scripts/Levels.gd" id="1_6sqer"]

[node name="Levels" type="HBoxContainer"]
custom_minimum_size = Vector2(50, 150)
offset_right = 50.0
offset_bottom = 150.0
alignment = 1
script = ExtResource("1_6sqer")

[node name="Level1" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="Level2" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="Level3" type="ProgressBar" parent="."]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="Horizon" type="Line2D" parent="."]
points = PackedVector2Array(-2, 75, 52, 75)
width = 2.0
antialiased = true
